jalv (1.6.1) unstable;

  * Fix compilation with recent Gtkmm versions that require C++11

 -- David Robillard <d@drobilla.net>  Sun, 12 Feb 2017 15:20:20 +0100

jalv (1.6.0) stable;

  * Support CV ports if Jack metadata is enabled (patch from Hanspeter Portner)
  * Fix unreliable UI state initialization (patch from Hanspeter Portner)
  * Fix memory error on preset save resulting in odd bundle names
  * Improve preset support
  * Support numeric and string plugin properties (event-based control)
  * Support thread-safe state restoration
  * Update UI when internal plugin state is changed during preset load
  * Add generic Qt control UI from Amadeus Folego
  * Add PortAudio backend (compile time option, audio only)
  * Set Jack port order metadata
  * Allow Jack client name to be set from command line (thanks Adam Avramov)
  * Add command prompt to console version for changing controls
  * Add option to print plugin trace messages
  * Print colorful log if output is a terminal
  * Exit on Jack shutdown (patch from Robin Gareus)
  * Report Jack latency (patch from Robin Gareus)
  * Exit GUI versions on interrupt
  * Fix semaphore correctness issues
  * Use moc-qt4 if present for systems with multiple Qt versions
  * Add Qt5 version

 -- David Robillard <d@drobilla.net>  Wed, 04 Jan 2017 12:24:58 -0500

jalv (1.4.6) stable;

  * Show newly saved presets in the preset menu
  * Generate Qt moc nonsense at build time for broader compatibility
  * Update for latest LV2 Atom Object simplifications
  * Set port pretty names via new Jack metadata API
  * Add support for data-access extension (based on patch by Filipe Coelho)
  * Support new UI show/hide interface in console version
  * Add option to print control output changes to stdout
  * Support saving the same preset several times
  * Update man pages and console jalv help output for new options
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:30:28 -0400

jalv (1.4.4) stable;
