@@ -17,6 +17,10 @@ Print the command line options.
 Print control output changes to stdout.
 
 .TP
+\fB\-i\fR
+Ignore input on stdin (for background use).
+
+.TP
 \fB\-c SYM=VAL\fR
 Set control value (e.g. "vol=1.4").
 
