@@ -172,6 +172,7 @@ typedef struct {
 	int      no_menu;           ///< Hide menu iff true
 	int      show_ui;           ///< Show non-embedded UI
 	int      print_controls;    ///< Print control changes to stdout
+	int      non_interactive;   ///< Do not listen for commands on stdin
 } JalvOptions;
 
 typedef struct {
